--- a/MobilePOS/res/values/strings.xml
+++ b/MobilePOS/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="app_name_inventory">Inventory</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="scan">Scan</string>
 
 </resources>
